force-app/main/default/objects/Reise__c/fields/Gesamtbetrag__c.field-meta.xml
<CustomField>
    <fullName>Gesamtbetrag__c</fullName>
    <label>Gesamtbetrag</label>
    <summarizedField>Spesen__c.Betrag__c</summarizedField>
    <summaryForeignKey>Spesen__c.Reise__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>