force-app/main/default/objects/Reise__c/fields/Stadt__c.field-meta.xml
<CustomField>
    <fullName>Stadt__c</fullName>
    <label>Stadt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Berlin&lt;br&gt;</fullName>
            </value>
            <value>
                <fullName>Hamburg</fullName>
            </value>
            <value>
                <fullName>München</fullName>
            </value>
            <value>
                <fullName>Köln</fullName>
            </value>
            <value>
                <fullName>Frankfurt am Main</fullName>
            </value>
            <value>
                <fullName>Stuttgart</fullName>
            </value>
            <value>
                <fullName>Düsseldorf</fullName>
            </value>
            <value>
                <fullName>Dortmund</fullName>
            </value>
            <value>
                <fullName>Essen</fullName>
            </value>
            <value>
                <fullName>Leipzig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>