force-app/main/default/objects/Reise__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InBearbeitung</fullName>
            </value>
            <value>
                <fullName>ZuGenehmigen</fullName>
            </value>
            <value>
                <fullName>Genehmigt</fullName>
            </value>
            <value>
                <fullName>Ausbezahlt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>